# lumo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  build.rs
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: cookbook.md  internals.md  language.md  tutorial.md
docs/rfcs/: 0001-memory-model.md  0002-map-type.md  0003-module-system.md  0004-module-visibility.md  0005-enum-match.md  README.md
examples/: README.md  arrays.lum  average.lum  bool.lum  calc.lum  cipher.lum  csv.lum  fib.lum  float.lum  greet.lum  guard.lum  hello.lum  leaderboard.lum  linked_list.lum  loops.lum  math.lum  matrix.lum  parse.lum  points.lum  primes.lum  rpn.lum  save_load.lum  slug.lum  sort.lum  stats.lum  structs.lum  sum_stdin.lum  table.lum  tags.lum  use_mathx.lum  wordcount.lum
examples/lib/: mathx.lum
src/: ast.rs  codegen.rs  diagnostics.rs  lexer.rs  main.rs  parser.rs  span.rs  typeck.rs  types.rs
tests/: integration.rs
tests/cases/: affix.lum  affix.out  append_file.lum  append_file.out  arithmetic.lum  arithmetic.out  array_structs.lum  array_structs.out  arrays.lum  arrays.out  assert_fail.lum  assertions.lum  assertions.out  bitwise.lum  bitwise.out  bool.lum  bool.out  chr.lum  chr.out  compound_assign.lum  compound_assign.out  compound_bitwise.lum  compound_bitwise.out  control.lum  control.out  conversions.lum  conversions.out  div_zero.lum  enum_recursive.lum  enums.lum  enums.out  err_arg_type.lum  err_arity.lum  (+106 more)
